--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@
  * This is a general purpose Gradle build.
  * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.5.1/samples
  */
-plugins {
-    java
+apply plugin: 'java'
+
+dependencies {
+    files('libs/stdlib.jar') 
 }
